added posts by ID gets and put
